new package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "KolpakovDenis/yarrays",
+  "name": "d-kolpakov/yarrays",
   "description": "Arrays to objects",
   "keywords": ["helper", "array", "model", "collection"],
   "license": "MIT",
