--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "Arrays to objects",
   "keywords": ["helper", "array", "model", "collection"],
   "license": "MIT",
-  "type": "project",
+  "type": "library",
   "require": {
     "php": "^7.2"
   },
